스웨ì거 추가

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+
     // MySQL Connector
     runtimeOnly 'com.mysql:mysql-connector-j'
 
