--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,9 +18,10 @@ spring:
     logging:
       level:
         org.hibernate.SQL: debug
+        org.springframework.web: DEBUG
+        org.springframework.boot: DEBUG
 
   servlet:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-
