--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 src/main/frontend/node_modules/
+src/main/frontend/build/
 
 ### STS ###
 .apt_generated
