--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,11 @@ task buildReact(type: Exec) {
             commandLine "sh", "-c", "NODE_ENV=development npm run build:dev"
         }
     }
+
+        // 표준 출력과 오류 출력을 확인할 수 있도록 설정
+    standardOutput = System.out
+    errorOutput = System.err
+    ignoreExitValue = true  // 명령이 실패해도 계속 진행하도록 설정
     
 }
 
