--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -14,11 +14,15 @@ RUN curl -L https://services.gradle.org/distributions/gradle-${GRADLE_VERSION}-b
 # Gradle을 PATH에 추가
 ENV PATH="${GRADLE_HOME}/bin:${PATH}"
 
-# Node.js 설치
-ENV NODE_VERSION=16.x
+# Node.js 20 버전 설치
+ENV NODE_VERSION=20.x
 RUN apt-get update && apt-get install -y curl
 RUN curl -fsSL https://deb.nodesource.com/setup_${NODE_VERSION} | bash - && \
     apt-get install -y nodejs
+
+# 환경 변수 SPRING_PROFILE 전달
+ARG SPRING_PROFILE
+ENV SPRING_PROFILE=${SPRING_PROFILE}
 
 # 작업 디렉토리 설정
 WORKDIR /app
@@ -26,5 +30,5 @@ WORKDIR /app
 # 소스 코드 복사
 COPY . .
 
-# Gradle 빌드 실행 (프로덕션 모드)
-RUN gradle build -Dspring.profiles.active=prod --no-daemon
+# Gradle 빌드 실행 (스프링 프로파일은 빌드 시 Jenkins에서 넘겨받도록 설정)
+CMD gradle build -Dspring.profiles.active=${SPRING_PROFILE} --no-daemon
