--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,4 +1,3 @@
-# 빌드 환경을 위한 Dockerfile
 FROM eclipse-temurin:17-jdk AS build
 
 # Gradle 설치
@@ -11,18 +10,11 @@ RUN curl -L https://services.gradle.org/distributions/gradle-${GRADLE_VERSION}-b
     ln -s /opt/gradle-${GRADLE_VERSION} ${GRADLE_HOME} && \
     rm gradle.zip
 
-# Gradle을 PATH에 추가
+# Gradle 버전 확인 (추가된 부분)
+RUN ${GRADLE_HOME}/bin/gradle -v  # Gradle이 정상적으로 설치되었는지 확인
+
+# 환경 변수에 추가
 ENV PATH="${GRADLE_HOME}/bin:${PATH}"
-
-# Node.js 20 버전 설치
-ENV NODE_VERSION=20.x
-RUN apt-get update && apt-get install -y curl
-RUN curl -fsSL https://deb.nodesource.com/setup_${NODE_VERSION} | bash - && \
-    apt-get install -y nodejs
-
-# 환경 변수 SPRING_PROFILE 전달
-ARG SPRING_PROFILE
-ENV SPRING_PROFILE=${SPRING_PROFILE}
 
 # 작업 디렉토리 설정
 WORKDIR /app
@@ -30,14 +22,5 @@ WORKDIR /app
 # 소스 코드 복사
 COPY . .
 
-# Gradle 빌드 실행 (스프링 프로파일은 빌드 시 Jenkins에서 넘겨받도록 설정)
-#CMD gradle build -Dspring.profiles.active=${SPRING_PROFILE} --no-daemon
-
-# 빌드 완료 후 WAR 파일 위치 확인
-# RUN ls -l /app/build/libs/
-
 # Gradle 빌드 실행 (프로덕션 모드)
-RUN ${GRADLE_HOME}/bin/gradle build -Dspring.profiles.active=dev --no-daemon
-
-# 빌드 완료 후 WAR 파일 위치 확인
-RUN ls -l /app/build/libs/
+RUN gradle build -Dspring.profiles.active=dev --no-daemon
