--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,20 +1,26 @@
+# 빌드 환경을 위한 Dockerfile
 FROM eclipse-temurin:17-jdk AS build
 
 # Gradle 설치
 RUN apt-get update && apt-get install -y curl unzip
 ENV GRADLE_VERSION=8.5
 ENV GRADLE_HOME=/opt/gradle
+
+# Gradle 설치
 RUN curl -L https://services.gradle.org/distributions/gradle-${GRADLE_VERSION}-bin.zip -o gradle.zip && \
     mkdir -p ${GRADLE_HOME} && \
     unzip -d /opt gradle.zip && \
     ln -s /opt/gradle-${GRADLE_VERSION} ${GRADLE_HOME} && \
     rm gradle.zip
 
-# Gradle 버전 확인 (추가된 부분)
-RUN ${GRADLE_HOME}/bin/gradle -v  # Gradle이 정상적으로 설치되었는지 확인
+# Gradle 설치 확인
+RUN ls -l ${GRADLE_HOME}/bin && ${GRADLE_HOME}/bin/gradle -v  # Gradle이 정상적으로 설치되었는지 확인
 
-# 환경 변수에 추가
-ENV PATH="${GRADLE_HOME}/bin:${PATH}"
+# Node.js 설치
+ENV NODE_VERSION=20.x
+RUN apt-get update && apt-get install -y curl
+RUN curl -fsSL https://deb.nodesource.com/setup_${NODE_VERSION} | bash - && \
+    apt-get install -y nodejs
 
 # 작업 디렉토리 설정
 WORKDIR /app
@@ -23,4 +29,4 @@ WORKDIR /app
 COPY . .
 
 # Gradle 빌드 실행 (프로덕션 모드)
-RUN gradle build -Dspring.profiles.active=dev --no-daemon
+RUN ${GRADLE_HOME}/bin/gradle build -Dspring.profiles.active=dev --no-daemon
