--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -26,5 +26,8 @@ WORKDIR /app
 # 소스 코드 복사
 COPY . .
 
+# Gradle 빌드 실행 전에 SPRING_PROFILE 값 출력
+RUN echo "Spring Profile: ${SPRING_PROFILE}"
+
 # Gradle 빌드 실행 (프로덕션 모드)
 RUN ${GRADLE_HOME}/gradle-${GRADLE_VERSION}/bin/gradle build -Dspring.profiles.active=${SPRING_PROFILE} --no-daemon
