--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -33,4 +33,4 @@ ARG SPRING_PROFILE
 RUN echo "Spring Profile: ${SPRING_PROFILE}"
 
 # Gradle 빌드 실행 (프로덕션 모드)
-RUN ${GRADLE_HOME}/gradle-${GRADLE_VERSION}/bin/gradle build -Dspring.profiles.active=${SPRING_PROFILE} --no-daemon
+RUN ${GRADLE_HOME}/gradle-${GRADLE_VERSION}/bin/gradle clean build -Dspring.profiles.active=${SPRING_PROFILE} --no-daemon
