--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -19,10 +19,11 @@
     "webpack": "^5.98.0"
   },
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build:dev": "export NODE_ENV=development NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
-    "build:prod": "export NODE_ENV=production NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
-    "test": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts test",
+    "start": "cross-env NODE_ENV=local react-scripts start",
+    "start:log": "cross-env NODE_ENV=local && echo $NODE_ENV && cross-env NODE_ENV=local react-scripts start",
+    "build:dev": "cross-env NODE_ENV=development react-scripts build",
+    "build:prod": "cross-env NODE_ENV=production react-scripts build",
+    "test": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
