--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -21,8 +21,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=local react-scripts start",
     "start:log": "cross-env NODE_ENV=local && echo $NODE_ENV && cross-env NODE_ENV=local react-scripts start",
-    "build:dev": "cross-env NODE_ENV=development && echo $NODE_ENV && react-scripts build",
-    "build:prod": "cross-env NODE_ENV=production && echo $NODE_ENV && react-scripts build",
+    "build:dev": "cross-env NODE_ENV=development && react-scripts build",
+    "build:prod": "cross-env NODE_ENV=production && react-scripts build",
     "test": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
     "eject": "react-scripts eject"
   },
