--- a/build.gradle
+++ b/build.gradle
@@ -73,39 +73,50 @@ dependencies {
     }
 }
 
-
 def frontendDir = "$projectDir/src/main/frontend"
 
 sourceSets {
-	main {
-		resources { srcDirs = ["$projectDir/src/main/resources"]
-		}
-	}
+    main {
+        resources { srcDirs = ["$projectDir/src/main/resources"]
+        }
+    }
 }
 
 processResources { dependsOn "copyReactBuildFiles" }
 
 task installReact(type: Exec) {
-	workingDir "$frontendDir"
-	inputs.dir "$frontendDir"
-	group = BasePlugin.BUILD_GROUP
-	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
-		commandLine "npm.cmd", "audit", "fix"
-		commandLine 'npm.cmd', 'install' }
-	else {
-		commandLine "npm", "audit", "fix" commandLine 'npm', 'install'
-	}
+    // 로컬 환경인지 확인하는 조건 (기본 로직: 'local' 프로필이면 스킵)
+    def isLocalEnvironment = System.getProperty("spring.profiles.active", "local")
+
+    // 로컬 환경이면 작업 건너뛰기
+    onlyIf { !isLocalEnvironment }
+
+    workingDir "$frontendDir"
+    inputs.dir "$frontendDir"
+    group = BasePlugin.BUILD_GROUP
+    if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
+        commandLine "npm.cmd", "audit", "fix"
+        commandLine 'npm.cmd', 'install'
+    } else {
+        commandLine "npm", "audit", "fix"
+        commandLine 'npm', 'install'
+    }
 }
 
 task buildReact(type: Exec) {
-	dependsOn "installReact"
-	workingDir "$frontendDir"
-	inputs.dir "$frontendDir"
-	group = BasePlugin.BUILD_GROUP
-    	// -Dspring.profiles.active 값 가져오기 (기본값: "dev")
-	def profile = System.getProperty("spring.profiles.active", "dev")
-	// OS에 따른 명령어 설정
-    // OS에 따른 명령어 설정
+    dependsOn "installReact"
+
+    // 로컬 환경인지 확인하는 조건
+    def isLocalEnvironment = System.getProperty("spring.profiles.active", "local")
+
+    // 로컬 환경이면 작업 건너뛰기
+    onlyIf { !isLocalEnvironment }
+
+    workingDir "$frontendDir"
+    inputs.dir "$frontendDir"
+    group = BasePlugin.BUILD_GROUP
+    def profile = System.getProperty("spring.profiles.active", "local")
+
     if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
         if (profile == "prod") {
             commandLine "cmd", "/c", "set NODE_ENV=production && set REACT_APP_SPRING_PROFILE=prod && npm run build:prod"
@@ -120,14 +131,20 @@ task buildReact(type: Exec) {
         }
     }
 
-        // 표준 출력과 오류 출력을 확인할 수 있도록 설정
     standardOutput = System.out
     errorOutput = System.err
-    
 }
 
 task copyReactBuildFiles(type: Copy) {
-	dependsOn "buildReact"
-	from "$frontendDir/build"
-	into "$projectDir/src/main/resources/static"
+    dependsOn "buildReact"
+
+    // 로컬 환경인지 확인하는 조건
+    def isLocalEnvironment = System.getProperty("spring.profiles.active", "local")
+
+    // 로컬 환경이면 작업 건너뛰기
+    onlyIf { !isLocalEnvironment }
+
+    from "$frontendDir/build"
+    into "$projectDir/src/main/resources/static"
 }
+
