--- a/build.gradle
+++ b/build.gradle
@@ -86,10 +86,10 @@ processResources { dependsOn "copyReactBuildFiles" }
 
 task installReact(type: Exec) {
     // 로컬 환경인지 확인하는 조건 (기본 로직: 'local' 프로필이면 스킵)
-    def isLocalEnvironment = System.getProperty("spring.profiles.active", "local")
+    def isLocalEnvironment = System.getProperty("spring.profiles.active", "local") == "local"
 
     // 로컬 환경이면 작업 건너뛰기
-    onlyIf { !isLocalEnvironment }
+   onlyIf { !isLocalEnvironment }
 
     workingDir "$frontendDir"
     inputs.dir "$frontendDir"
@@ -107,7 +107,7 @@ task buildReact(type: Exec) {
     dependsOn "installReact"
 
     // 로컬 환경인지 확인하는 조건
-    def isLocalEnvironment = System.getProperty("spring.profiles.active", "local")
+    def isLocalEnvironment = System.getProperty("spring.profiles.active", "local") == "local"
 
     // 로컬 환경이면 작업 건너뛰기
     onlyIf { !isLocalEnvironment }
@@ -115,7 +115,7 @@ task buildReact(type: Exec) {
     workingDir "$frontendDir"
     inputs.dir "$frontendDir"
     group = BasePlugin.BUILD_GROUP
-    def profile = System.getProperty("spring.profiles.active", "local")
+    def profile = System.getProperty("spring.profiles.active", "dev")
 
     if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
         if (profile == "prod") {
@@ -139,7 +139,7 @@ task copyReactBuildFiles(type: Copy) {
     dependsOn "buildReact"
 
     // 로컬 환경인지 확인하는 조건
-    def isLocalEnvironment = System.getProperty("spring.profiles.active", "local")
+    def isLocalEnvironment = System.getProperty("spring.profiles.active", "local") == "local"
 
     // 로컬 환경이면 작업 건너뛰기
     onlyIf { !isLocalEnvironment }
