--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ build/
 !**/src/test/**/build/
 src/main/frontend/node_modules/
 src/main/frontend/build/
+src/main/resources/static/
 
 ### STS ###
 .apt_generated
