[feat] 이미지 업로드 일부 로직 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,4 +2,29 @@ spring:
   application:
     name: Bon
   profiles:
-    active: dev
+    active: local
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://211.110.44.79:3306/bon_dev
+    username: itadmin
+    password: gthkds!83!
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    properties:
+      hibernate:
+        show-sql: true
+        format-sql: true
+    hibernate:
+      ddl-auto: update
+    logging:
+      level:
+        org.hibernate.SQL: debug
+        org.springframework.web: DEBUG
+        org.springframework.boot: DEBUG
+
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+filepath: D:\temp\
