--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,6 +20,8 @@ spring:
         org.hibernate.SQL: debug
         org.springframework.web: DEBUG
         org.springframework.boot: DEBUG
+  mvc:
+    static-path-pattern: /uploads/images/**
   web:
     resources:
       static-locations: file:///uploads/images/
