정적 리소스 경로 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,7 +24,12 @@ spring:
     static-path-pattern: /uploads/images/**
   web:
     resources:
-      static-locations: file:///uploads/images/
+      static-locations:
+        - classpath:/static/
+        - classpath:/public/
+        - classpath:/resources/
+        - classpath:/META-INF/resources/
+        - file:///uploads/images/
 
   servlet:
     multipart:
