--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
     // JWT 라이브러리
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    //implementation 'org.springframework.boot:spring-boot-starter-actuator'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리용
 
@@ -52,6 +52,7 @@ dependencies {
 
     // MySQL Connector
     runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'org.springframework:spring-context'
 
     // faker
     implementation 'net.datafaker:datafaker:2.0.2'
