--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,9 +4,9 @@ spring:
       on-profile: dev
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://211.110.44.79:3306/bon_dev
+    url: jdbc:mysql://211.110.44.28:3306/bon_dev
     username: itadmin
-    password: gthkds!83!
+    password: kdsgth!84!
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     properties:
