[feat] 브런치 이미지 리사이징 처리

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    // 리사이징처리
+    implementation 'net.coobird:thumbnailator:0.4.19'
 
     // json
     implementation 'org.json:json:20230227'
