--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "axios": "^1.8.3",
     "bonbjj": "file:",
     "colorthief": "^2.6.0",
