[feat] CKEditor에서 이미지url추가로 백앤드 로직 추가 및 수정

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -47,3 +47,6 @@ logging:
     org.springframework.transaction: DEBUG # Spring 트랜잭션 로그 디버그(DEBUG) 모드 활성화
 
 filepath: /data/uploads/bon/
+
+app:
+  base-url: http://bon-dev.ezylab.co.kr
