--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ spring:
       on-profile: prod
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://211.110.44.28:3306/bon_dev
+    url: jdbc:mysql://211.110.44.28:3306/bon_prod
     username: itadmin
     password: kdsgth!84!
   jpa:
@@ -15,18 +15,17 @@ spring:
         format-sql: false
     hibernate:
       ddl-auto: update
-    logging:
-      level:
-        org.hibernate.SQL: info
-        org.springframework.web: DEBUG
-        org.springframework.boot: DEBUG
 
   servlet:
     multipart:
-      max-file-size: 10MB
-      max-request-size: 10MB
+      max-file-size: 50MB
+      max-request-size: 50MB
 
-filepath: /data/uploads/bon/
+filepath: /data/uploads/bon_prod/
 
 app:
-  base-url: http://bon-dev.ezylab.co.kr
+  base-url: http://bon.ezylab.co.kr
+
+logging:
+  level:
+    root: INFO
